# telex

./: CMakeLists.txt  README.md
gresources/: resources.vapi  resources.xml
gresources/gtk/: help-overlay.ui  menus.ui
gsettings/: feedreader.gschema.xml  telex.gschema.xml.cmakegen
po/: de.po
src/: application.vala  application.vala.md  constants.vala.cmakegen  main.vala
src/feedparser/: atomfeedparser.vala  feedchannel.vala  feeditem.vala  feedparser.vala  feedperson.vala  rssfeedparser.vala
src/feedreader/: feedreader.vala
src/gui/: entrydisplay.vala  feedadder.vala  feedlist.vala  feedlistitem.vala  mainwindow.vala  mainwindowheader.vala  newslist.vala  newslistitem.vala  newslistmenu.vala  newslistplaceholder.vala  settingsdialog.vala
src/gui/widgets/: htmlview.vala  linkbutton.vala  listitem.vala  webimage.vala
src/helper/: download.vala  time.vala  xml.vala
